Adding token configuration for publishing test reports

--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -31,3 +31,4 @@ jobs:
         with:
           report_paths: '**/target/surefire-reports/TEST-*.xml'
           include_passed: true
+          token: ${{ secrets.GITHUB_TOKEN }}
